# OctoprintOpenApi/generated/OpenAPIClient/Classes/OpenAPIs/Models/PrinterStateFlags.swift
@@ -1,0 +1,36 @@
+//
+// PrinterStateFlags.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+public struct PrinterStateFlags: Codable { 
+
+
+    public var operational: Bool?
+    public var paused: Bool?
+    public var printing: Bool?
+    public var cancelling: Bool?
+    public var pausing: Bool?
+    public var sdReady: Bool?
+    public var error: Bool?
+    public var ready: Bool?
+    public var closedOrError: Bool?
+
+    public init(operational: Bool? = nil, paused: Bool? = nil, printing: Bool? = nil, cancelling: Bool? = nil, pausing: Bool? = nil, sdReady: Bool? = nil, error: Bool? = nil, ready: Bool? = nil, closedOrError: Bool? = nil) {
+        self.operational = operational
+        self.paused = paused
+        self.printing = printing
+        self.cancelling = cancelling
+        self.pausing = pausing
+        self.sdReady = sdReady
+        self.error = error
+        self.ready = ready
+        self.closedOrError = closedOrError
+    }
+
+}
