# OctoprintOpenApi/generated/OpenAPIClient/Classes/OpenAPIs/Models/TemperatureState.swift
@@ -1,0 +1,20 @@
+//
+// TemperatureState.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+public struct TemperatureState: Codable { 
+
+
+    public var tool0: Temperature?
+
+    public init(tool0: Temperature? = nil) {
+        self.tool0 = tool0
+    }
+
+}
